--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "firebase-admin": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
